更新了列表的生成和加载算法

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -85,7 +85,7 @@
         }
     </script>
     <script src="/js/index.js"></script>
-    <script type="module" src="/js/module.js"></script>
+    <script type="module" src="/js/module.esm.js"></script>
     <script>
         /* 来源于 https://www.jianshu.com/p/f82e06abc10e
         let vh = window.innerHeight / 100
