feat: 优化了在 vercel 上的运行方法

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,49 +7,36 @@
     <title>基岩版命令编写助手</title>
     <meta name="theme-color" content="#3F51B5">
     <link rel="shortcut icon" type="image/png" href="./icon.png">
-    <!--Manifest-->
+    <!-- Manifest -->
     <link rel="manifest" href="/manifest.json"/>
-    <!--CSS-->
+    <!-- CSS -->
     <link rel="stylesheet" href="/css/index.css"/>
-    <!--MDUI CSS-->
-    <link rel="stylesheet" href="/mdui/dist/css/mdui.min.css"/>
-    <!--Eruda.js-->
-    <script>
-        /**
-         * 移动端开发者工具（eruda）：默认关闭
-         * Mobile Devtools(eruda): default off
-         * 
-         * https://github.com/liriliri/eruda
-         */
-        if (localStorage.getItem("devTool") === null) {
-            localStorage.setItem("devTool", "false")
-        }
-        if (localStorage.getItem("devTool") === "true") {
-            let script = document.createElement("script")
-            script.src = "/eruda/eruda.js"
-            document.head.appendChild(script)
-            script.onload = () => {
-                eruda.init()
-            }
-        }
-        localStorage.setItem("devTool", "true")
-    </script>
+    <!-- MDUI CSS -->
+    <%_ let mduiCSSLink = ON_VERCEL ? "\//cdn.jsdelivr.net/npm/mdui@latest/dist/css/mdui.min.css" : "/mdui/dist/css/mdui.min.css" -%>
+    <link rel="stylesheet" href="<%= mduiCSSLink %>"/>
+    <%_ if (MOBILE_DEV_MODEL) { -%>
+    <%_ let erudaJSLink = ON_VERCEL ? "\//cdn.jsdelivr.net/npm/eruda" : "/eruda/eruda.js" -%>
+    <!-- Eruda.js -->
+    <script src="<%= erudaJSLink %>"></script>
+    <script>eruda.init()</script>
+    <%_ } -%>
 </head>
 
 <body class="mdui-theme-primary-indigo mdui-theme-accent-pink" style="padding-top: 128px;">
-    <!--应用栏-->
+    <!-- Header -->
     <%- include("layout/header") %>
-    <!--侧边栏-->
+    <!-- Sidebar -->
     <%- include("layout/sidebar") %>
-    <!--工具-->
-    <%- include("layout/tool", { availableLanguages, lang }) %>
-    <!--列表-->
+    <!-- Tools -->
+    <%- include("layout/tool", { AVAILABLE_LANGUAGES, LANG }) %>
+    <!-- List -->
     <div class="mdui-container-fluid mdui-p-a-0">
         <div class="mdui-list mdui-p-t-0" id="list"></div>
     </div>
-    <!--MDUI JS-->
-    <script src="./mdui/dist/js/mdui.min.js"></script>
-    <!--JavaScript-->
+    <!-- MDUI JS -->
+    <%_ let mduiJSLink = ON_VERCEL ? "\//cdn.jsdelivr.net/npm/mdui@latest/dist/js/mdui.min.js" : "/mdui/dist/js/mdui.min.js" -%>
+    <script src="<%= mduiJSLink %>"></script>
+    <!-- JavaScript -->
     <script>
         /**
          * 默认语言：简体中文
@@ -87,14 +74,6 @@
     <script src="/js/index.js"></script>
     <script type="module" src="/js/module.esm.js"></script>
     <script>
-        /* 来源于 https://www.jianshu.com/p/f82e06abc10e
-        let vh = window.innerHeight / 100
-        document.documentElement.style.setProperty("--vh", `${vh}px`)
-        window.addEventListener("resize", () => {
-            let vh = window.innerHeight / 100
-            document.documentElement.style.setProperty("--vh", `${vh}px`)
-        })*/
-        
         const LANG = page.option.language.get()
         page.list.withImage = page.option.withImage.get()
         page.option.mduiThemeColor.setFromStorage()
