--- a/views/layout/tool.ejs
+++ b/views/layout/tool.ejs
@@ -1,3 +1,3 @@
-    <%- include("tools/option", { availableLanguages, nowLang: lang }) %>
+    <%- include("tools/option", { AVAILABLE_LANGUAGES, LANG }) %>
     <%- include("tools/custom") %>
     <%- include("tools/enumerate") %>
