--- a/views/layout/tools/option.ejs
+++ b/views/layout/tools/option.ejs
@@ -13,8 +13,8 @@
                 <div class="mdui-col-xs-4 mdui-p-b-1 mdui-typo">设置页面语言</div>
                 <div class="mdui-col-xs-4 mdui-p-b-1 mdui-text-right">
                     <select class="mdui-select" mdui-select>
-                    <%_ Object.keys(availableLanguages).forEach(lang => { -%>
-                        <option value="<%= lang %>"<%= (()=>{if(nowLang===lang)return"selected"})() %>><%= availableLanguages[lang] %></option>
+                    <%_ Object.keys(AVAILABLE_LANGUAGES).forEach(lang => { -%>
+                        <option value="<%= lang %>"<%= (()=>{if(LANG===lang)return" selected"})() %>><%= AVAILABLE_LANGUAGES[lang] %></option>
                     <%_ }) -%>
                     </select>
                 </div>
