--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,10 +12,10 @@
     <!-- CSS -->
     <link rel="stylesheet" href="/css/index.css"/>
     <!-- MDUI CSS -->
-    <%_ let mduiCSSLink = ON_VERCEL ? "\//cdn.jsdelivr.net/npm/mdui@latest/dist/css/mdui.min.css" : "/mdui/dist/css/mdui.min.css" -%>
+    <%_ let mduiCSSLink = USE_CDN ? "\//cdn.jsdelivr.net/npm/mdui@latest/dist/css/mdui.min.css" : "/mdui/dist/css/mdui.min.css" -%>
     <link rel="stylesheet" href="<%= mduiCSSLink %>"/>
     <%_ if (MOBILE_DEV_MODEL) { -%>
-    <%_ let erudaJSLink = ON_VERCEL ? "\//cdn.jsdelivr.net/npm/eruda" : "/eruda/eruda.js" -%>
+    <%_ let erudaJSLink = USE_CDN ? "\//cdn.jsdelivr.net/npm/eruda" : "/eruda/eruda.js" -%>
     <!-- Eruda.js -->
     <script src="<%= erudaJSLink %>"></script>
     <script>eruda.init()</script>
@@ -34,7 +34,7 @@
         <div class="mdui-list mdui-p-t-0" id="list"></div>
     </div>
     <!-- MDUI JS -->
-    <%_ let mduiJSLink = ON_VERCEL ? "\//cdn.jsdelivr.net/npm/mdui@latest/dist/js/mdui.min.js" : "/mdui/dist/js/mdui.min.js" -%>
+    <%_ let mduiJSLink = USE_CDN ? "\//cdn.jsdelivr.net/npm/mdui@latest/dist/js/mdui.min.js" : "/mdui/dist/js/mdui.min.js" -%>
     <script src="<%= mduiJSLink %>"></script>
     <!-- JavaScript -->
     <script>
