feat: 优化了 PWA 设置

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>基岩版命令编写助手</title>
     <meta name="theme-color" content="#3F51B5">
-    <link rel="shortcut icon" type="image/png" href="./icon.png">
+    <link rel="shortcut icon" type="image/png" href="./favicon/512.png">
     <!-- Manifest -->
-    <link rel="manifest" href="/manifest.json"/>
+    <link rel="manifest" href="/manifest.webmanifest"/>
     <!-- CSS -->
     <link rel="stylesheet" href="/css/index.css"/>
     <!-- MDUI CSS -->
