--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="<%= LANG %>">
+<html>
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title><%= data.title %></title>
+    <title></title>
     <meta name="theme-color" content="#3F51B5">
     <link rel="shortcut icon" type="image/png" href="./favicon/512.png">
     <!-- Manifest -->
@@ -12,12 +12,10 @@
     <!-- CSS -->
     <link rel="stylesheet" href="/css/index.css"/>
     <!-- MDUI CSS -->
-    <%_ let mduiCSSLink = USE_CDN ? "\//cdn.jsdelivr.net/npm/mdui@latest/dist/css/mdui.min.css" : "/mdui/dist/css/mdui.min.css" -%>
-    <link rel="stylesheet" href="<%= mduiCSSLink %>"/>
+    <link rel="stylesheet" href="<%= USE_CDN ? "\//cdn.jsdelivr.net/npm/mdui@latest/dist/css/mdui.min.css" : "/mdui/dist/css/mdui.min.css" %>"/>
     <%_ if (MOBILE_DEV_MODEL) { -%>
-    <%_ let erudaJSLink = USE_CDN ? "\//cdn.jsdelivr.net/npm/eruda" : "/eruda/eruda.js" -%>
     <!-- Eruda.js -->
-    <script src="<%= erudaJSLink %>"></script>
+    <script src="<%= USE_CDN ? "\//cdn.jsdelivr.net/npm/eruda" : "/eruda/eruda.js" %>"></script>
     <script>eruda.init()</script>
     <%_ } -%>
 </head>
@@ -28,60 +26,42 @@
     <!-- Sidebar -->
     <%- include("layout/sidebar") %>
     <!-- Tools -->
-    <%- include("layout/tool", { AVAILABLE_LANGUAGES, LANG }) %>
+    <%- include("layout/tool", { AVAILABLE_LANGUAGES }) %>
     <!-- List -->
     <div class="mdui-container-fluid mdui-p-a-0">
         <div class="mdui-list mdui-p-t-0" id="list"></div>
     </div>
     <!-- MDUI JS -->
-    <%_ let mduiJSLink = USE_CDN ? "\//cdn.jsdelivr.net/npm/mdui@latest/dist/js/mdui.min.js" : "/mdui/dist/js/mdui.min.js" -%>
-    <script src="<%= mduiJSLink %>"></script>
+    <script src="<%= USE_CDN ? "\//cdn.jsdelivr.net/npm/mdui@latest/dist/js/mdui.min.js" : "/mdui/dist/js/mdui.min.js" %>"></script>
     <!-- JavaScript -->
-    <script>
-        /**
-         * 默认语言：简体中文
-         * Default language: Simplified Chinese
-         */
-        if (localStorage.getItem("language") === null) {
-            localStorage.setItem("language", "zh")
-        }
-        /** 
-         * 默认主题色：{primary: "indigo", accent: "pink"}
-         * Default Theme Color: {primary: "indigo", accent: "pink"}
-         * 可用主题色：参见 https://www.mdui.org/docs/color
-         * Available Theme Color: by https://www.mdui.org/docs/color
-         * 
-         * https://github.com/zdhxiong/mdui
-         */
-        if (localStorage.getItem("mduiThemeColor") === null) {
-            localStorage.setItem("mduiThemeColor", '{primary: "indigo", accent: "pink"}')
-        }
-        /** 
-         * 默认自定义链接：""(空)
-         * Default Custom URL: ""(none)
-         */
-        if (localStorage.getItem("customURL") === null) {
-            localStorage.setItem("customURL", "")
-        }
-        /** 
-         * 默认列表是否加载图片：true
-         * Default The List Item Is With Image: true
-         */
-        if (localStorage.getItem("withImage") === null) {
-            localStorage.setItem("withImage", true)
-        }
-    </script>
     <script src="/js/index.js"></script>
-    <script>
-        const LANG = "<%= LANG %>"
-        const BRANCH = "<%= BRANCH %>"
-        page.option.mduiThemeColor.setFromStorage()
-        window.onload = () => {
-            page.data.getJsonData("/<%= LANG %>/data.<%= BRANCH %>.json").then(data => {
-                page.data = Object.assign({}, page.data, data)
-                page.initialize()
-            })
-        }
+    <script type="module">
+        import { WebOption } from "<%= USE_CDN ? "\//cdn.jsdelivr.net/npm/web-option" : "/web-option/index.js" %>"
+        let wo = new WebOption()
+        wo.addItem("lang", <%- JSON.stringify(Object.keys(AVAILABLE_LANGUAGES)) %>, (selected, original) => {
+            window.LANG = selected
+            document.documentElement.lang = selected
+            console.log("lang -> from", original, "to", selected)
+        }).addItem("branch", <%- JSON.stringify(Object.keys(BRANCHS)) %>, (selected, original) => {
+            window.BRANCH = selected
+            console.log("branch -> from", original, "to", selected)
+        }).addItem("themePrimaryColor", <%- JSON.stringify(Object.keys(THEME_COLOR.primary)) %>, (selected, original) => {
+            document.body.classList.remove(`mdui-theme-primary-${original}`)
+            document.body.classList.add(`mdui-theme-primary-${selected}`)
+            fetch(`/api/theme.color.${selected}`).then(text => text.text()).then(text => document.head.querySelector('meta[name="theme-color"]').content = text)
+            console.log("themePrimaryColor -> from", original, "to", selected)
+        }).addItem("themeAccentColor", <%- JSON.stringify(Object.keys(THEME_COLOR.accent)) %>, (selected, original) => {
+            document.body.classList.remove(`mdui-theme-accent-${original}`)
+            document.body.classList.add(`mdui-theme-accent-${selected}`)
+            console.log("themeAccentColor -> from", original, "to", selected)
+        }).addItem("customURL", [], (selected, original) => {
+            document.querySelector("#customURL").value = selected
+            console.log("customURL -> from", original, "to", selected)
+        }).addItem("listWithImage", [true, false], (selected, original) => {
+            page.list.withImage = selected
+            console.log("listWithImage -> from", original, "to", selected)
+        }).init(() => page.initialize())
+        page.option = wo
     </script>
 </body>
 
