--- a/views/layout/header.ejs
+++ b/views/layout/header.ejs
@@ -13,7 +13,7 @@
             <a class="mdui-btn mdui-btn-icon" style="min-width: 24px; width: 24px; margin-left: 0; margin-right: 12px" target="_blank" id="wiki" mdui-tooltip="{content: 'WIKI'}">
                 <i class="mdui-icon material-icons mdui-text-color-theme-icon">send</i>
             </a>
-            <button class="mdui-btn mdui-btn-icon" style="display: none; min-width: 24px; width: 24px; margin-left: 0; margin-right: 12px" id="copy" mdui-tooltip="{content: 'COPY'}" onclick="page.input.copy('copy')">
+            <button class="mdui-btn mdui-btn-icon" style="display: none; min-width: 24px; width: 24px; margin-left: 0; margin-right: 12px" id="copy" mdui-tooltip="{content: 'COPY'}" onclick="app.input.copy('copy')">
                 <i class="mdui-icon material-icons mdui-text-color-theme-icon">content_copy</i>
             </button>
         </div>
