--- a/views/layout/tools/custom.ejs
+++ b/views/layout/tools/custom.ejs
@@ -30,7 +30,7 @@
             </div>
         </div>
         <div class="mdui-dialog-actions">
-            <button class="mdui-btn mdui-ripple" onclick="page.custom.setURL()">保存</button>
+            <button class="mdui-btn mdui-ripple" onclick="app.custom.setURL()">保存</button>
             <button class="mdui-btn mdui-ripple" mdui-dialog-close>关闭</button>
         </div>
     </div>
