feat: 允许在 config 中定制 i18n 和 init 函数

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -28,7 +28,7 @@
     <!-- Sidebar -->
     <%- include("layout/sidebar") %>
     <!-- Tools -->
-    <%- include("layout/tool", { AVAILABLE_LANGUAGES }) %>
+    <%- include("layout/dialog", { AVAILABLE_LANGUAGES }) %>
     <!-- List -->
     <div class="mdui-container-fluid mdui-p-a-0">
         <div class="mdui-list mdui-p-t-0" id="list">
