--- a/src/scss/lite.scss
+++ b/src/scss/lite.scss
@@ -10,40 +10,42 @@
         bottom: 56px;
     }
     
-    & .mdui-toolbar:nth-child(1) {
-        height: 40px !important;
-        bottom: 0 !important;
-        top: auto !important;
-        position: fixed;
-    }
-    
-    & .mdui-toolbar:nth-child(1) .mdui-textfield-input {
-        font-size: 13px;
-        padding: 0 !important;
-        border: 0 !important;
-        margin: 0 !important;
-    }
-    
-    & .mdui-toolbar:nth-child(1) .mdui-icon {
-        display: none;
-    }
-    
-    & .mdui-toolbar:nth-child(1) .mdui-textfield {
-        padding: 8px 0 !important;
-    }
-    
-    & .mdui-toolbar:nth-child(1) .mdui-textfield-focus .mdui-textfield-input,
-    & .mdui-toolbar:nth-child(1) .mdui-textfield-focus .mdui-textfield-input:hover,
-    & .mdui-toolbar:nth-child(1) .mdui-textfield-input {
-        box-shadow: 0 0 0 0 !important;
-    }
-    
-    & .mdui-toolbar:nth-child(2) {
-        height: 45px !important;
-    }
-    
-    & .mdui-toolbar:nth-child(2) .mdui-list-item-content {
-        margin: 0 12px;
+    & .mdui-toolbar {
+        &:nth-child(1) {
+            height: 40px !important;
+            bottom: 0 !important;
+            top: auto !important;
+            position: fixed;
+            
+            .mdui-textfield-input {
+                font-size: 13px;
+                padding: 0 !important;
+                border: 0 !important;
+                margin: 0 !important;
+            }
+            
+            .mdui-icon {
+                display: none;
+            }
+            
+            .mdui-textfield {
+                padding: 8px 0 !important;
+            }
+            
+            .mdui-textfield-focus .mdui-textfield-input,
+            .mdui-textfield-focus .mdui-textfield-input:hover,
+            .mdui-textfield-input {
+                box-shadow: 0 0 0 0 !important;
+            }
+        }
+        
+        &:nth-child(2) {
+            height: 45px !important;
+            
+            .mdui-list-item-content {
+                margin: 0 12px;
+            }
+        }
     }
     
     & #grammar {
@@ -55,31 +57,33 @@
         margin-top: 0;
     }
     
-    & #list .mdui-list-item {
-        padding-right: 8px;
-        padding-left: 8px;
-        min-height: 24px;
-        max-height: 36px;
-        height: calc(100vh / 16);
-        height: calc(var(--vh, 1vh) * 100 / 16);
-        /* transition: height .3s; */
-        /* 因为在加载长列表时会比较卡，所以这行先注释掉了 */
-        /* 建议开启输入法的 不挤压页面 等类似功能 */
-    }
-    
-    & #list .mdui-list-item-content {
-        padding: 0;
-        height: 20px;
-    }
-    
-    & #list .mdui-list-item-title {
-        display: inline;
-        font-size: 13px;
-    }
-    
-    & #list .mdui-list-item-text {
-        display: inline;
-        font-size: 11px;
+    & #list {
+        .mdui-list-item {
+            padding-right: 8px;
+            padding-left: 8px;
+            min-height: 24px;
+            max-height: 36px;
+            height: calc(100vh / 16);
+            height: calc(var(--vh, 1vh) * 100 / 16);
+            /* transition: height .3s; */
+            /* 因为在加载长列表时会比较卡，所以这行先注释掉了 */
+            /* 建议开启输入法的 不挤压页面 等类似功能 */
+        }
+        
+        .mdui-list-item-content {
+            padding: 0;
+            height: 20px;
+        }
+        
+        .mdui-list-item-title {
+            display: inline;
+            font-size: 13px;
+        }
+        
+        .mdui-list-item-text {
+            display: inline;
+            font-size: 11px;
+        }
     }
     
     & .mdui-dialog-full-screen {
