feat: 完善了 option 模块，现可正常使用

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -29,6 +29,22 @@
     display: none;
 }
 
+body.loading {
+    .mdui-appbar {
+        -webkit-box-shadow: none !important;
+                box-shadow: none !important;
+    }
+    
+    .loading-box {
+        display: block;
+        width: 100%;
+    }
+}
+
 body {
     padding-top: 128px;
+    
+    &:not(.loading) .loading-box {
+        display: none !important;
+    }
 }
