--- a/views/docs.pug
+++ b/views/docs.pug
@@ -5,7 +5,7 @@ html
         meta(name="viewport" content="width=device-width, initial-scale=1")
         title= title
         link(rel="shortcut icon" type="image/png" href="/favicon/512.png")
-        link(rel="stylesheet" href=lib("github-markdown-css/github-markdown.css"))
+        link(rel="stylesheet" href="/lib/github-markdown-css/github-markdown.css")
         style.
             .markdown-body {
                 box-sizing: border-box;
