--- a/views/partial/header.pug
+++ b/views/partial/header.pug
@@ -7,7 +7,4 @@
         .mdui-list-item-content
             #grammar.mdui-list-item-title(style="overflow-x: scroll;")
             #note.mdui-list-item-text.mdui-list-item-one-line(style="overflow-x: scroll;")
-        a#wiki.mdui-btn.mdui-btn-icon(style="min-width: 24px; width: 24px; margin-left: 0; margin-right: 12px" target="_blank" mdui-tooltip="{content: 'WIKI'}")
-            i.mdui-icon.material-icons.mdui-text-color-theme-icon send
-        button#copy.mdui-btn.mdui-btn-icon(style="display: none; min-width: 24px; width: 24px; margin-left: 0; margin-right: 12px" mdui-tooltip="{content: 'COPY'}" onclick="app.input.copy('copy')")
-            i.mdui-icon.material-icons.mdui-text-color-theme-icon content_copy
+        button#function.mdui-btn.mdui-btn-icon(style="min-width: 24px; width: 24px; margin-left: 0; margin-right: 12px")
