--- a/views/partial/sidebar.pug
+++ b/views/partial/sidebar.pug
@@ -15,6 +15,12 @@ button.mdui-fab.mdui-fab-fixed.mdui-ripple.mdui-color-theme-accent.mdui-hidden-s
         subtitle: "你可以通过这个工具引入自己的自定义项",
         buttonText: "打开"
     })
+    +card({
+        id: "pwa",
+        title: "PWA",
+        subtitle: "你可以通过这个工具使用 PWA 的相关功能",
+        buttonText: "打开"
+    })
     //- +card({
         id: "enumerate-card",
         title: "穷举助手",
