--- a/views/index.pug
+++ b/views/index.pug
@@ -8,7 +8,7 @@ html
         // Icon 
         link(rel="shortcut icon" type="image/png" href="/favicon/512.png")
         // Manifest 
-        link(rel="manifest" href="/manifest.webmanifest")
+        link(rel="manifest" href="/manifest.json")
         // CSS 
         link(rel="stylesheet" href="/css/index.css")
         // MDUI CSS 
@@ -38,7 +38,6 @@ html
         include partial/header.pug
         // Sidebar 
         include partial/sidebar.pug
-        // Dialogs 
         include partial/dialogs.pug
         // List 
         .virtual-scroll
@@ -47,3 +46,4 @@ html
         script(src="/lib/mdui/dist/js/mdui.min.js")
         // JavaScript 
         script(src="/js/index.js" type="module")
+        script(src="/js/page.js" type="module")
