--- a/views/mixin/card.pug
+++ b/views/mixin/card.pug
@@ -4,4 +4,4 @@ mixin card({id, title, subtitle, buttonText = "OPEN"})
             .mdui-card-primary-title= title
             .mdui-card-primary-subtitle= subtitle
         .mdui-card-actions
-            button.mdui-btn.mdui-text-color-theme-accent.mdui-ripple.mdui-float-right.mdui-m-r-0(mdui-dialog=`{target: '#${id}-dialog', history: false, modal: true}`)= buttonText
+            button.mdui-btn.mdui-text-color-theme-accent.mdui-ripple.mdui-float-right.mdui-m-r-0(onclick=`_page.dialogs.${id}.open()`)= buttonText
