--- a/views/mixin/dialog.pug
+++ b/views/mixin/dialog.pug
@@ -17,5 +17,6 @@ mixin dialog({id, title, subtitle, tab, content, onsave})
                     .mdui-col-xs-1.mdui-p-b-1.retract
                     .mdui-col-xs-10.mdui-col-sm-11.mdui-p-b-1!= item.content
         .mdui-dialog-actions
-            button.mdui-btn.mdui-ripple(onclick=onsave) 保存
+            if onsave
+                button.mdui-btn.mdui-ripple(onclick=onsave) 保存
             button.mdui-btn.mdui-ripple(mdui-dialog-close) 关闭
