--- a/views/index.pug
+++ b/views/index.pug
@@ -38,6 +38,7 @@ html
         include partial/header.pug
         // Sidebar 
         include partial/sidebar.pug
+        // Dialogs 
         include partial/dialogs.pug
         // List 
         .virtual-scroll
