--- a/views/partial/dialogs.pug
+++ b/views/partial/dialogs.pug
@@ -10,7 +10,7 @@ include ../mixin/dialog.pug
             content: `
                 <span class="mdui-typo">
                     该工具暂时不能使用，请尝试使用 <code>@option</code> 命令<br />
-                    请确保加载了 <code>/js/custom.example.js</code> 扩展（默认加载）
+                    请确保加载了 <code>/js/custom/example.js</code> 扩展（已在配置文件中指定并加载）
                 </span>
             `
         }
@@ -25,7 +25,7 @@ include ../mixin/dialog.pug
             title: "说明：",
             content: `
                 <span class="mdui-typo">
-                    文件格式为 <code>.js</code><br />
+                    每行一个链接<br />
                     有关如何编写，请见<a href="./docs/how-to-custom.md" target="_blank">此处</a><br />
                     您添加的所有信息都将保存在 <code>localStorage</code> 中
                 </span>
@@ -35,12 +35,12 @@ include ../mixin/dialog.pug
             title: "输入：",
             content: `
                 <div class="mdui-textfield mdui-textfield-black mdui-p-a-0">
-                    <input class="mdui-textfield-input" placeholder="请输入文件链接" id="customURL" />
+                    <textarea class="mdui-textfield-input" rows="4" placeholder="请输入文件链接" id="customURL"></textarea>
                 </div>
             `
         }
     ],
-    onsave: "app.option.setItem('customURL', document.querySelector('#customURL').value)"
+    onsave: "app.option.setItem('customURL', document.querySelector('#customURL').value.split('\\n'))"
 })
 +dialog({
     id: "pwa",
