--- a/views/includes/dialogs.pug
+++ b/views/includes/dialogs.pug
@@ -1,4 +1,4 @@
-include ../mixin/dialog.pug
+include ./mixins/dialog.pug
 
 +dialog({
     id: "option",
@@ -73,4 +73,3 @@ include ../mixin/dialog.pug
         }
     ]
 })
-//- +dialog({})
