fix(app): 输入框 :hover 后出现黑色外框

--- a/src/browser/sass/mdui.extension.scss
+++ b/src/browser/sass/mdui.extension.scss
@@ -1,3 +1,4 @@
+// Drawer
 .mdui-drawer-always-wide {
     &.mdui-drawer {
         width: 320px !important;
@@ -5,47 +6,48 @@
     }
     
     &.mdui-drawer-close {
-        -webkit-transform: translateX(-330px) !important;
         transform: translateX(-330px) !important;
     }
     
     &.mdui-drawer-close.mdui-drawer-right {
-        -webkit-transform: translateX(330px) !important;
         transform: translateX(330px) !important;
     }
 }
 
-
-
-
-
-
-.mdui-textfield-white .mdui-textfield-input {
-    border-bottom: 1px solid white;
+// Textfield
+.mdui-textfield-white {
+    .mdui-textfield-input {
+        border-bottom: 1px solid white;
+    }
+    
+    .mdui-textfield-input:not([disabled]):hover {
+        border-bottom: 1px solid white;
+        box-shadow: 0 1px 0 0 white;
+        cursor: pointer;
+    }
+    
+    &.mdui-textfield-focus .mdui-textfield-input,
+    &.mdui-textfield-focus .mdui-textfield-input:hover {
+        border-bottom-color: white;
+        box-shadow: 0 1px 0 0 white;
+    }
 }
 
-.mdui-textfield-focus.mdui-textfield-white .mdui-textfield-input, 
-.mdui-textfield-focus.mdui-textfield-white .mdui-textfield-input:hover {
-    border-bottom-color: white;
-    -webkit-box-shadow: 0 1px 0 0 white;
-            box-shadow: 0 1px 0 0 white;
+.mdui-textfield-black {
+    &.mdui-textfield-focus .mdui-textfield-input,
+    &.mdui-textfield-focus .mdui-textfield-input:hover {
+        border-bottom-color: rgba(0,0,0,0.7);
+        box-shadow: 0 1px 0 0 rgba(0,0,0,0.7);
+    }
 }
 
-.mdui-textfield-focus.mdui-textfield-black .mdui-textfield-input, 
-.mdui-textfield-focus.mdui-textfield-black .mdui-textfield-input:hover {
-    border-bottom-color: rgba(0,0,0,0.7);
-    -webkit-box-shadow: 0 1px 0 0 rgba(0,0,0,0.7);
-            box-shadow: 0 1px 0 0 rgba(0,0,0,0.7);
-}
-
-
-
-
-
-.mdui-list-item-things-display-when-hover {
-    display: none !important;
-}
-
-.mdui-list-item:hover .mdui-list-item-things-display-when-hover {
-    display: inline !important;
+// List
+.mdui-list-item {
+    .mdui-list-item-things-display-when-hover {
+        display: none !important;
+    }
+    
+    &:hover .mdui-list-item-things-display-when-hover {
+        display: inline !important;
+    }
 }
