feat: 将 "searchCache" 纳入用户数据

--- a/views/includes/dialogs.pug
+++ b/views/includes/dialogs.pug
@@ -73,3 +73,11 @@ include ./mixins/dialog.pug
         }
     ]
 })
++dialog({
+    id: "history",
+    title: "历史记录",
+    subtitle: "你可以通过这个工具管理自己的历史记录",
+    content: `
+        
+    `,
+})
