--- a/views/index.pug
+++ b/views/index.pug
@@ -11,7 +11,7 @@ html
         link(rel="manifest" href="/manifest.json")
         // MDUI CSS 
         if bundle
-            link(rel="stylesheet" href="//cdn.jsdelivr.net/npm/mdui/dist/css/mdui.min.css")
+            link(rel="stylesheet" href="//fastly.jsdelivr.net/npm/mdui/dist/css/mdui.min.css")
         else
             link(rel="stylesheet" href="/lib/mdui/dist/css/mdui.min.css")
         // CSS 
@@ -30,7 +30,7 @@ html
             #list.virtual-scroll__container.mdui-list.mdui-p-y-0
         // MDUI JS 
         if bundle
-            script(src="//cdn.jsdelivr.net/npm/mdui/dist/js/mdui.min.js")
+            script(src="//fastly.jsdelivr.net/npm/mdui/dist/js/mdui.min.js")
         else
             script(src="/lib/mdui/dist/js/mdui.min.js")
         // JavaScript 
